--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List By DG8AB</title>
+    <title>To-Do List with Rewards</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -12,11 +12,11 @@
     <link rel="apple-touch-icon" href="touch-icon-iphone.png">
     <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png">
-    <audio id="rewardSound" src="https://pixabay.com/sound-effects/toot-toot-sound-effect-1/"></audio>
+    <audio id="rewardSound" src="sound.mp3"></audio>
 </head>
 <body>
     <div class="container">
-        <h1>To-Do List by DG8AB</h1>
+        <h1>To-Do List with Rewards</h1>
         <input type="text" id="taskInput" placeholder="Add a new task">
         <input type="text" id="rewardInput" placeholder="Add a reward">
         <button onclick="addTask()">Add</button>
